BF-602 stabilize eligibility and report ordering